# pavopdf

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-03-15-plan-1-foundation.md  2026-03-15-plan-2-organise.md  2026-03-15-plan-3-pdf-to-other.md  2026-03-15-plan-4-other-to-pdf.md  2026-03-15-plan-5-edit.md  2026-03-15-plan-6-security-repair.md  2026-03-15-plan-7-distribution.md
docs/superpowers/specs/: 2026-03-15-pavopdf-design.md
src/: App.svelte  app.css  app.html  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: mod.rs  process.rs  recent_files.rs  settings.rs  thumbnails.rs
src-tauri/src/pipeline/: mod.rs  progress.rs  temp.rs  validate.rs
src-tauri/src/storage/: mod.rs  recent_files.rs  settings.rs
src-tauri/src/tools/: mod.rs
src-tauri/src/tools/convert_from/: mod.rs  pdfium_helper.rs  to_excel.rs  to_image.rs  to_pdfa.rs  to_ppt.rs  to_word.rs
src-tauri/src/tools/convert_to/: from_excel.rs  from_html.rs  from_image.rs  from_ppt.rs  from_word.rs  mod.rs
src-tauri/src/tools/edit/: metadata.rs  mod.rs  page_numbers.rs  redact.rs  watermark.rs
src-tauri/src/tools/organise/: compress.rs  integration_tests.rs  merge.rs  mod.rs  remove.rs  reorder.rs  rotate.rs  split.rs
src-tauri/src/tools/repair/: mod.rs  ocr.rs  repair.rs
src-tauri/src/tools/security/: mod.rs  protect.rs  sign.rs  unlock.rs
src/lib/: api.ts  tools-registry.ts  types.ts
src/lib/stores/: active-tool.svelte.ts  operation.svelte.ts  recent-files.svelte.ts  settings.svelte.ts
web/: astro.config.mjs  package-lock.json  package.json  postcss.config.js  vercel.json
web/public/: llms-full.txt  llms.txt  robots.txt
web/src/components/: FAQ.astro  Footer.astro  (+3 more)
(+41 files in other folders)
