[package]
name = "pavopdf"
version = "0.1.0"
description = "Free, open-source, offline PDF tools"
authors = ["PavoPDF Contributors"]
edition = "2021"

[lib]
name = "pavopdf_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "fs"] }
tempfile = "3"
anyhow = "1"
thiserror = "1"

lopdf = "0.31"
pdfium-render = "0.8"
image = { version = "0.25", features = ["jpeg", "png", "webp"] }
printpdf = "0.7"
docx-rs = "0.4"
calamine = { version = "0.24", features = ["dates"] }
quick-xml = { version = "0.36", features = ["serialize"] }
zip = "2"

[profile.release]
opt-level = "s"
strip = true
lto = true
codegen-units = 1
panic = "abort"
